// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command git with git "commit" hook it should work with hooks: child-process 1`] = `
Object {
  "args": Array [
    "run",
    "precarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 2`] = `
Object {
  "args": Array [
    "diff",
    "--staged",
    "--name-only",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 3`] = `
Object {
  "args": Array [
    "ls-files",
    "--exclude-standard",
    "--modified",
    "--others",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 4`] = `
Object {
  "args": Array [
    "run",
    "precarna:analyse",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 5`] = `
Object {
  "args": Array [
    "--config",
    "/path/to/project/node_modules/carna/configs/prettierrc.json",
    "--write",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "/path/to/project/node_modules/.bin/prettier",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 6`] = `
Object {
  "args": Array [
    "--color",
    "--max-warnings",
    "0",
    "--config",
    "/path/to/project/node_modules/carna/configs/eslintrc.json",
    "--fix",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "/path/to/project/node_modules/.bin/eslint",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 7`] = `
Object {
  "args": Array [
    "run",
    "postcarna:analyse",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 8`] = `
Object {
  "args": Array [
    "add",
    "\\"/path/to/project/src/index.ts\\"",
    "\\"/path/to/project/src/lib/app.ts\\"",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 9`] = `
Object {
  "args": Array [
    "run",
    "postcarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work: child-process 1`] = `
Object {
  "args": Array [
    "diff",
    "--staged",
    "--name-only",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work: child-process 2`] = `
Object {
  "args": Array [
    "ls-files",
    "--exclude-standard",
    "--modified",
    "--others",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work: child-process 3`] = `
Object {
  "args": Array [
    "--config",
    "/path/to/project/node_modules/carna/configs/prettierrc.json",
    "--write",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "/path/to/project/node_modules/.bin/prettier",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work: child-process 4`] = `
Object {
  "args": Array [
    "--color",
    "--max-warnings",
    "0",
    "--config",
    "/path/to/project/node_modules/carna/configs/eslintrc.json",
    "--fix",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "/path/to/project/node_modules/.bin/eslint",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "commit" hook it should work: child-process 5`] = `
Object {
  "args": Array [
    "add",
    "\\"/path/to/project/src/index.ts\\"",
    "\\"/path/to/project/src/lib/app.ts\\"",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;
